<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:orientation="vertical"
    android:background="#FFC107"
    android:id="@+id/mainContainer"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
    />
    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/full_name"
        android:textStyle="bold"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="15dp"
        android:paddingLeft="15dp"
        />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/user_name"
        android:textStyle="bold"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/password"
        android:textStyle="bold"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="15dp"
        android:paddingStart="15dp"
        android:password="true"
        />
    <Button
        android:id="@+id/Save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="15sp"
        android:backgroundTint="#3F51B5"
        android:layout_marginBottom="1dp"
        />
    <Button
        android:id="@+id/view_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_data"
        android:textSize="15sp"
        android:backgroundTint="#3F51B5"
        />

    <Button
        android:id="@+id/search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#3F51B5"
        android:text="search"
        android:textSize="15sp" />
    <Button
        android:id="@+id/update_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#3F51B5"
        android:text="Update"
        android:textSize="15sp" />
    <Button
        android:id="@+id/delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#3F51B5"
        android:text="delete"
        android:textSize="15sp" />
</LinearLayout>